# Projeto_01

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  gerar_pdf.py  guia_estudo.md  main.py  pyproject.toml
data/: init.sql
src/: analyzer.py  database.py
